<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/quizzo"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btnStartQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:text="@string/btn_start_quiz"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnStartQuiz"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/high_score_0"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnStartQuiz"
        android:layout_alignStart="@+id/btnStartQuiz"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_category"
        android:layout_marginTop="-20dp"
        android:text="@string/select_category"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_category"
        android:layout_alignStart="@+id/btnStartQuiz"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_category"
        android:layout_marginTop="18dp"
        android:text="@string/select_difficulty"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="258dp"
        android:layout_height="98dp"
        android:layout_below="@+id/spinner_difficulty"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="30dp"
        app:srcCompat="@drawable/quizzotitle" />


</RelativeLayout>